grammar/output/MappingDSLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g 2010-05-28 12:19:00

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class MappingDSLParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CONTEXT", "AREA_ACTION", "FUNC_CALL", "PROC_CALL", "OFFSET", "COORD", "IMAGE", "RECTANGLE", "CIRCLE", "RAW", "PROCEDURE", "FUNCTION", "ID", "COLOR", "INT", "DASH", "PLUS", "MULT", "DIV", "OP", "FLOAT", "STRING", "DIRECTION", "WS", "EXPONENT", "ESC_SEQ", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "':'", "'outline'", "'inline'", "';'", "'('", "')'", "','", "'raw'", "'.'", "'hex'", "'square'", "'free'", "'size'", "'each'", "'within'", "'beside'", "'proc'", "'{'", "'}'", "'func'"
    };
    public static final int DIRECTION=26;
    public static final int FUNCTION=15;
    public static final int EXPONENT=28;
    public static final int PROC_CALL=7;
    public static final int OCTAL_ESC=32;
    public static final int FLOAT=24;
    public static final int ID=16;
    public static final int EOF=-1;
    public static final int COLOR=17;
    public static final int CONTEXT=4;
    public static final int FUNC_CALL=6;
    public static final int RAW=13;
    public static final int ESC_SEQ=29;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int OFFSET=8;
    public static final int IMAGE=10;
    public static final int RECTANGLE=11;
    public static final int PLUS=20;
    public static final int COORD=9;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int DASH=19;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int UNICODE_ESC=31;
    public static final int HEX_DIGIT=30;
    public static final int INT=18;
    public static final int MULT=21;
    public static final int PROCEDURE=14;
    public static final int WS=27;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int AREA_ACTION=5;
    public static final int T__37=37;
    public static final int CIRCLE=12;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int OP=23;
    public static final int DIV=22;
    public static final int STRING=25;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "synpred18_MappingDSL", "synpred34_MappingDSL", "area", 
        "synpred56_MappingDSL", "areaAction", "synpred62_MappingDSL", "synpred45_MappingDSL", 
        "simpleExpr", "synpred47_MappingDSL", "image", "synpred58_MappingDSL", 
        "coordinateSystem", "synpred14_MappingDSL", "synpred15_MappingDSL", 
        "synpred26_MappingDSL", "synpred54_MappingDSL", "synpred59_MappingDSL", 
        "synpred23_MappingDSL", "synpred41_MappingDSL", "synpred1_MappingDSL", 
        "synpred42_MappingDSL", "synpred28_MappingDSL", "synpred57_MappingDSL", 
        "synpred44_MappingDSL", "synpred12_MappingDSL", "synpred24_MappingDSL", 
        "synpred29_MappingDSL", "synpred46_MappingDSL", "synpred53_MappingDSL", 
        "synpred25_MappingDSL", "synpred39_MappingDSL", "synpred11_MappingDSL", 
        "synpred6_MappingDSL", "action", "location", "coord", "synpred49_MappingDSL", 
        "synpred61_MappingDSL", "synpred52_MappingDSL", "synpred3_MappingDSL", 
        "synpred60_MappingDSL", "synpred51_MappingDSL", "context", "synpred2_MappingDSL", 
        "synpred40_MappingDSL", "synpred7_MappingDSL", "synpred20_MappingDSL", 
        "synpred43_MappingDSL", "offset", "circle", "synpred31_MappingDSL", 
        "synpred48_MappingDSL", "synpred9_MappingDSL", "synpred27_MappingDSL", 
        "synpred5_MappingDSL", "size", "synpred36_MappingDSL", "func", "synpred32_MappingDSL", 
        "synpred17_MappingDSL", "proc", "areaExpr", "synpred4_MappingDSL", 
        "synpred30_MappingDSL", "synpred10_MappingDSL", "synpred8_MappingDSL", 
        "synpred22_MappingDSL", "synpred33_MappingDSL", "synpred35_MappingDSL", 
        "rectangle", "synpred13_MappingDSL", "synpred38_MappingDSL", "main", 
        "synpred37_MappingDSL", "synpred50_MappingDSL", "synpred21_MappingDSL", 
        "synpred19_MappingDSL", "synpred55_MappingDSL", "synpred16_MappingDSL", 
        "procCall"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public MappingDSLParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public MappingDSLParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public MappingDSLParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return MappingDSLParser.tokenNames; }
    public String getGrammarFileName() { return "/Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g"; }


    public static class main_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "main"
    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:1: main : ( context | areaAction | proc | func )* ;
    public final MappingDSLParser.main_return main() throws RecognitionException {
        MappingDSLParser.main_return retval = new MappingDSLParser.main_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        MappingDSLParser.context_return context1 = null;

        MappingDSLParser.areaAction_return areaAction2 = null;

        MappingDSLParser.proc_return proc3 = null;

        MappingDSLParser.func_return func4 = null;



        try { dbg.enterRule(getGrammarFileName(), "main");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(24, 1);

        try {
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:6: ( ( context | areaAction | proc | func )* )
            dbg.enterAlt(1);

            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:8: ( context | areaAction | proc | func )*
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(24,8);
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:8: ( context | areaAction | proc | func )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=5;
                try { dbg.enterDecision(1);

                try {
                    isCyclicDecision = true;
                    alt1 = dfa1.predict(input);
                }
                catch (NoViableAltException nvae) {
                    dbg.recognitionException(nvae);
                    throw nvae;
                }
                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:9: context
            	    {
            	    dbg.location(24,9);
            	    pushFollow(FOLLOW_context_in_main72);
            	    context1=context();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, context1.getTree());

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:17: areaAction
            	    {
            	    dbg.location(24,17);
            	    pushFollow(FOLLOW_areaAction_in_main74);
            	    areaAction2=areaAction();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, areaAction2.getTree());

            	    }
            	    break;
            	case 3 :
            	    dbg.enterAlt(3);

            	    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:28: proc
            	    {
            	    dbg.location(24,28);
            	    pushFollow(FOLLOW_proc_in_main76);
            	    proc3=proc();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, proc3.getTree());

            	    }
            	    break;
            	case 4 :
            	    dbg.enterAlt(4);

            	    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:24:33: func
            	    {
            	    dbg.location(24,33);
            	    pushFollow(FOLLOW_func_in_main78);
            	    func4=func();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, func4.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(24, 39);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "main");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "main"

    public static class context_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "context"
    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:1: context : ID ':' coordinateSystem (a= ( 'outline' | 'inline' ) )? ';' -> ^( CONTEXT[$ID.text] coordinateSystem ( $a)? ) ;
    public final MappingDSLParser.context_return context() throws RecognitionException {
        MappingDSLParser.context_return retval = new MappingDSLParser.context_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token a=null;
        Token ID5=null;
        Token char_literal6=null;
        Token string_literal8=null;
        Token string_literal9=null;
        Token char_literal10=null;
        MappingDSLParser.coordinateSystem_return coordinateSystem7 = null;


        Object a_tree=null;
        Object ID5_tree=null;
        Object char_literal6_tree=null;
        Object string_literal8_tree=null;
        Object string_literal9_tree=null;
        Object char_literal10_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_35=new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_34=new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleSubtreeStream stream_coordinateSystem=new RewriteRuleSubtreeStream(adaptor,"rule coordinateSystem");
        try { dbg.enterRule(getGrammarFileName(), "context");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(26, 1);

        try {
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:9: ( ID ':' coordinateSystem (a= ( 'outline' | 'inline' ) )? ';' -> ^( CONTEXT[$ID.text] coordinateSystem ( $a)? ) )
            dbg.enterAlt(1);

            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:11: ID ':' coordinateSystem (a= ( 'outline' | 'inline' ) )? ';'
            {
            dbg.location(26,11);
            ID5=(Token)match(input,ID,FOLLOW_ID_in_context88); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID5);

            dbg.location(26,14);
            char_literal6=(Token)match(input,33,FOLLOW_33_in_context90); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_33.add(char_literal6);

            dbg.location(26,18);
            pushFollow(FOLLOW_coordinateSystem_in_context92);
            coordinateSystem7=coordinateSystem();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_coordinateSystem.add(coordinateSystem7.getTree());
            dbg.location(26,36);
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:36: (a= ( 'outline' | 'inline' ) )?
            int alt3=2;
            try { dbg.enterSubRule(3);
            try { dbg.enterDecision(3);

            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=34 && LA3_0<=35)) ) {
                alt3=1;
            }
            } finally {dbg.exitDecision(3);}

            switch (alt3) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:0:0: a= ( 'outline' | 'inline' )
                    {
                    dbg.location(26,36);
                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:37: ( 'outline' | 'inline' )
                    int alt2=2;
                    try { dbg.enterSubRule(2);
                    try { dbg.enterDecision(2);

                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==34) ) {
                        alt2=1;
                    }
                    else if ( (LA2_0==35) ) {
                        alt2=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return retval;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 0, input);

                        dbg.recognitionException(nvae);
                        throw nvae;
                    }
                    } finally {dbg.exitDecision(2);}

                    switch (alt2) {
                        case 1 :
                            dbg.enterAlt(1);

                            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:38: 'outline'
                            {
                            dbg.location(26,38);
                            string_literal8=(Token)match(input,34,FOLLOW_34_in_context97); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_34.add(string_literal8);


                            }
                            break;
                        case 2 :
                            dbg.enterAlt(2);

                            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:48: 'inline'
                            {
                            dbg.location(26,48);
                            string_literal9=(Token)match(input,35,FOLLOW_35_in_context99); if (state.failed) return retval; 
                            if ( state.backtracking==0 ) stream_35.add(string_literal9);


                            }
                            break;

                    }
                    } finally {dbg.exitSubRule(2);}


                    }
                    break;

            }
            } finally {dbg.exitSubRule(3);}

            dbg.location(26,59);
            char_literal10=(Token)match(input,36,FOLLOW_36_in_context103); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_36.add(char_literal10);



            // AST REWRITE
            // elements: a, coordinateSystem
            // token labels: a
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleTokenStream stream_a=new RewriteRuleTokenStream(adaptor,"token a",a);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 26:63: -> ^( CONTEXT[$ID.text] coordinateSystem ( $a)? )
            {
                dbg.location(26,66);
                // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:66: ^( CONTEXT[$ID.text] coordinateSystem ( $a)? )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(26,68);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CONTEXT, (ID5!=null?ID5.getText():null)), root_1);

                dbg.location(26,86);
                adaptor.addChild(root_1, stream_coordinateSystem.nextTree());
                dbg.location(26,103);
                // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:26:103: ( $a)?
                if ( stream_a.hasNext() ) {
                    dbg.location(26,103);
                    adaptor.addChild(root_1, stream_a.nextNode());

                }
                stream_a.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(26, 109);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "context");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "context"

    public static class areaAction_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "areaAction"
    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:28:1: areaAction : areaExpr ':' action ';' -> ^( AREA_ACTION areaExpr action ) ;
    public final MappingDSLParser.areaAction_return areaAction() throws RecognitionException {
        MappingDSLParser.areaAction_return retval = new MappingDSLParser.areaAction_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token char_literal12=null;
        Token char_literal14=null;
        MappingDSLParser.areaExpr_return areaExpr11 = null;

        MappingDSLParser.action_return action13 = null;


        Object char_literal12_tree=null;
        Object char_literal14_tree=null;
        RewriteRuleTokenStream stream_36=new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_33=new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleSubtreeStream stream_areaExpr=new RewriteRuleSubtreeStream(adaptor,"rule areaExpr");
        RewriteRuleSubtreeStream stream_action=new RewriteRuleSubtreeStream(adaptor,"rule action");
        try { dbg.enterRule(getGrammarFileName(), "areaAction");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(28, 1);

        try {
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:29:2: ( areaExpr ':' action ';' -> ^( AREA_ACTION areaExpr action ) )
            dbg.enterAlt(1);

            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:29:4: areaExpr ':' action ';'
            {
            dbg.location(29,4);
            pushFollow(FOLLOW_areaExpr_in_areaAction127);
            areaExpr11=areaExpr();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_areaExpr.add(areaExpr11.getTree());
            dbg.location(29,13);
            char_literal12=(Token)match(input,33,FOLLOW_33_in_areaAction129); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_33.add(char_literal12);

            dbg.location(29,17);
            pushFollow(FOLLOW_action_in_areaAction131);
            action13=action();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_action.add(action13.getTree());
            dbg.location(29,24);
            char_literal14=(Token)match(input,36,FOLLOW_36_in_areaAction133); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_36.add(char_literal14);



            // AST REWRITE
            // elements: action, areaExpr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 29:28: -> ^( AREA_ACTION areaExpr action )
            {
                dbg.location(29,31);
                // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:29:31: ^( AREA_ACTION areaExpr action )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(29,33);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(AREA_ACTION, "AREA_ACTION"), root_1);

                dbg.location(29,45);
                adaptor.addChild(root_1, stream_areaExpr.nextTree());
                dbg.location(29,54);
                adaptor.addChild(root_1, stream_action.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(29, 61);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "areaAction");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "areaAction"

    public static class action_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "action"
    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:31:1: action : ( image -> ^( IMAGE[$image.text] ) | COLOR | ID | procCall );
    public final MappingDSLParser.action_return action() throws RecognitionException {
        MappingDSLParser.action_return retval = new MappingDSLParser.action_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COLOR16=null;
        Token ID17=null;
        MappingDSLParser.image_return image15 = null;

        MappingDSLParser.procCall_return procCall18 = null;


        Object COLOR16_tree=null;
        Object ID17_tree=null;
        RewriteRuleSubtreeStream stream_image=new RewriteRuleSubtreeStream(adaptor,"rule image");
        try { dbg.enterRule(getGrammarFileName(), "action");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(31, 1);

        try {
            // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:31:8: ( image -> ^( IMAGE[$image.text] ) | COLOR | ID | procCall )
            int alt4=4;
            try { dbg.enterDecision(4);

            try {
                isCyclicDecision = true;
                alt4 = dfa4.predict(input);
            }
            catch (NoViableAltException nvae) {
                dbg.recognitionException(nvae);
                throw nvae;
            }
            } finally {dbg.exitDecision(4);}

            switch (alt4) {
                case 1 :
                    dbg.enterAlt(1);

                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:31:10: image
                    {
                    dbg.location(31,10);
                    pushFollow(FOLLOW_image_in_action152);
                    image15=image();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_image.add(image15.getTree());


                    // AST REWRITE
                    // elements: 
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    // wildcard labels: 
                    if ( state.backtracking==0 ) {
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 31:16: -> ^( IMAGE[$image.text] )
                    {
                        dbg.location(31,19);
                        // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:31:19: ^( IMAGE[$image.text] )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        dbg.location(31,21);
                        root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(IMAGE, (image15!=null?input.toString(image15.start,image15.stop):null)), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;}
                    }
                    break;
                case 2 :
                    dbg.enterAlt(2);

                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:32:4: COLOR
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(32,4);
                    COLOR16=(Token)match(input,COLOR,FOLLOW_COLOR_in_action164); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    COLOR16_tree = (Object)adaptor.create(COLOR16);
                    adaptor.addChild(root_0, COLOR16_tree);
                    }

                    }
                    break;
                case 3 :
                    dbg.enterAlt(3);

                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:33:4: ID
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(33,4);
                    ID17=(Token)match(input,ID,FOLLOW_ID_in_action169); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    ID17_tree = (Object)adaptor.create(ID17);
                    adaptor.addChild(root_0, ID17_tree);
                    }

                    }
                    break;
                case 4 :
                    dbg.enterAlt(4);

                    // /Users/michaelstover/Documents/workspace/coinjema/grammar/MappingDSL.g:34:4: procCall
                    {
                    root_0 = (Object)adaptor.nil();

                    dbg.location(34,4);
                    pushFollow(FOLLOW_procCall_in_action174);
                    procCall18=procCall();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, procCall18.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(34, 12);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "action");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "action"

    public static class simpleExpr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
